--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "lodash": "^4.17.21",
         "popper.js": "^1.15.0",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.49.11",
+        "sass": "1.32.*",
         "sass-loader": "^7.1.0",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
@@ -57,11 +57,13 @@
         "@hokify/vuejs-datepicker": "^2.0.2",
         "ajv": "^6.12.6",
         "ajv-keywords": "^3.4.1",
+        "bootstrap-vue": "^2.22.0",
         "bulma": "^0.7.5",
         "chart.js": "^2.9.4",
         "chartist": "^0.11.3",
         "es6-promise": "^4.2.8",
         "google-maps": "^3.3.0",
+        "html-to-pdfmake": "^2.3.11",
         "imagemin": "^5.0.0",
         "img-loader": "^3.0.1",
         "material-design-icons": "^3.0.1",
